--- a/index.html
+++ b/index.html
@@ -51,21 +51,10 @@
         }
     </style>
     <script>
-        async function fetchJobTitle(userId) {
-            console.log(`Fetching job title for user ID: ${userId}`);
-            const response = await fetch(`https://your-app-name.herokuapp.com/getJobTitle?user_id=${userId}`);
-            const data = await response.json();
-            console.log('Fetched job title:', data.job_title);
-            document.getElementById('jobTitle').value = data.job_title;
-            document.getElementById('userId').value = userId;
-        }
-
         window.onload = function() {
             const urlParams = new URLSearchParams(window.location.search);
             const userId = urlParams.get('user_id');
-            if (userId) {
-                fetchJobTitle(userId);
-            }
+            document.getElementById('userId').value = userId;
         }
 
         async function submitForm(event) {
@@ -76,7 +65,6 @@
             const emailAddress = formData.get('emailAddress');
             const company = formData.get('company');
             const userId = formData.get('userId');
-            const jobTitle = formData.get('jobTitle');
             const concatenatedLastName = `${lastName} MFDA#${userId}`;
 
             const data = {
@@ -85,7 +73,7 @@
                     { key: 'lastName', value: concatenatedLastName },
                     { key: 'emailAddress', value: emailAddress },
                     { key: 'company', value: company },
-                    { key: 'jobTitle', value: jobTitle }
+                    { key: 'jobTitle', value: '' } // Assuming job title is not required for the demo
                 ]
             };
 
@@ -135,7 +123,6 @@
                 <label for="emailAddress">Email Address:</label>
                 <input type="email" id="emailAddress" name="emailAddress" required>
             </div>
-            <input type="hidden" id="jobTitle" name="jobTitle">
             <input type="hidden" id="userId" name="userId">
             <div class="form-group">
                 <input type="submit" value="Register">
